# ColorGraph

./: CMakeLists.txt  parameters.txt
data/: sudoku.txt  sudoku6.txt  sudoku9.txt  test.txt  test2.txt
include/: colorGraph.h  utilities.h
src/: CMakeLists.txt  colorGraph (copy).cpp  colorGraph.cpp  input.cpp  main.cpp  pss.cpp  test.cpp  test2.cpp  testMatrix.cpp  undirect.cpp  utilities.cpp
